# VLtriangles

./: CMakeLists.txt  a.out  test.cpp  testgen.py  treetest.py
source/: geom.cpp  geom.hpp  main.cpp  operators.cpp
tests/: data.txt  generated.txt  newtest.txt  test0.txt  test1.txt  test2.txt  test3.txt  treetest.txt
